Fix spacing for transaction tags (#4911)
* fix: transaction tags display spacing

* fix: transaction tags display spacing

* update: remove customContent and use css with className to fix spacing as per the new row-column template

* update: new logic for tag row-column template

* update: add columnTemplate prop to replace className based styling

--- a/phytoplankton-console/src/components/ui/EntityPropertiesCard/index.module.less
+++ b/phytoplankton-console/src/components/ui/EntityPropertiesCard/index.module.less
@@ -26,4 +26,5 @@
 
 .itemLabel {
   color: @fr-colors-v2-gray-6;
+  white-space: nowrap;
 }
